Issue #233, fixed weird squish on community page

--- a/multipainter/src/Community/Community.css
+++ b/multipainter/src/Community/Community.css
@@ -13,6 +13,7 @@
 }
 
 .images-container {
+
   width: 90%;
   margin: auto;
 
@@ -40,9 +41,8 @@
 
   width: 100%;
   height: 100%; /* Ensure the template takes full height */
-
-  min-width: 400px;
-  min-height: 400px;
+  
+  min-height: 23vw;
 
   display: grid;
 }
